--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "smooth-scrollbar": "^8.8.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
